# fp-2025-cyp-spr

./: .gitignore  BookStore.hs  CHANGELOG.md  LICENSE  Main.hs  Md2HtmlParser.cabal  Presentation.html  README.md  REVIEW.md  flake.nix  hie.yaml  hw.cabal  hw1.hs  lambda-terms.cabal  lambdaCalc.hs  main.hs  monad.cabal  package.yaml  plot_metrics.py  pres.html  shell.nix  stack.yaml
.github/workflows/: test.yaml
app/: Main.hs
data/: example.md  not-simple.md  not-so-simple.md  simple.md  some-large-file.md  test.md
examples/: ex.turtle
metrics-one-run/: Main.hs
my-megaparsec-project/: CHANGELOG.md  README.md  hie.yaml  my-megaparsec-project.cabal  stack.yaml
my-megaparsec-project/examples/: Hw4_Eval.hs  LessonParser.hs  factorial.txt  fibonacci.txt  gcd.txt
my-megaparsec-project/src/: Expression.hs  LessonParser.hs  Main.hs  Optimizer.hs  Parser.hs  Statement.hs
my-megaparsec-project/test/: ExpressionSpec.hs  OptimizerPropertySpec.hs  OptimizerSpec.hs  StatementParserSpec.hs
npins/: sources.json
src/: Binary.hs  Expr.hs  IO.hs  LambdaTerms.hs  List.hs  Logger.hs  Md2HtmlParser.hs  RAList.hs  Tree.hs
src/Md2HtmlParser/: CLI.hs  GeneratorUtil.hs  HTML.hs  Logger.hs  Metrics.hs  Parser.hs
src/Md2HtmlParser/Parser/: Utils.hs
test/: CodeBlockSpec.hs  GeneratorUtil.hs  HTMLSpec.hs  InlineElementSpec.hs  LinkAndImageSpec.hs  ListParsingSpec.hs  MarkdownDocSpec.hs  ParserPropertyTestSpec.hs  Spec.hs
test/Test/: Binary.hs  List.hs  RAList.hs
tree-sitter/: grammar.js  tree-sitter.json
turtle-dsl/: LICENSE  turtle-dsl.cabal
turtle-dsl/src/: Interpreter.hs  Main.hs  Parser.hs
