cabal-version: 2.2

name:           lambda-terms
version:        0.1.0.0
author:         Stanislav Alekseev
maintainer:     Stanislav Alekseev
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

common common-options
  default-language: GHC2021
  default-extensions: GADTs
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  import: common-options
  hs-source-dirs:
      src
  exposed-modules:
      LambdaTerms
  build-depends:
      base >=4.7 && <5

executable lambda-terms-exe
  import: common-options
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lambda-terms

test-suite lambda-terms-test
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lambda-terms
    , hspec
