cabal-version:       2.2

name:                turtle-dsl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/turtle-dsl#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Mikhail Maliugin 
maintainer:          ghastmisha089@gmail.com
copyright:           2025 miko089
category:            Text
build-type:          Simple

executable turtle-dsl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       
      base >= 4.7 && < 5
    , megaparsec
    , text
    , containers
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
